--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Simulador de Crédito</title>
+  <title>Simulador de Crédito Hipotecario</title>
 
   <!-- Enlazamos la hoja de estilos externa -->
 
